--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "expo": {
 
     "name": "TanuTravelApp",
-    "slug": "TanuTravelApp",
-    "version": "1.0.0",
+    "slug": "TanuTravelAppwork",
+    "version": "1.0.1",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "myapp",
